# python_email_handler

./: pyproject.toml
app/: settings.py  urls.py
src/core/: __init__.py  app.py  base_model.py  validators.py
src/core/models/: base_model.py  icons.py
src/core/templates/: base.html  footer.html  navbar.html  navbar_authenticated.html  navbar_not_authenticated.html  pagination_controls.html  sidebar.html  style.css
src/core/templatetags/: numeric_tags.py  render_email_fields.py  table_tags.py  utils.py
src/email_storage/: admin.py  apps.py
src/email_storage/admin/: admin.py
src/email_storage/forms/: recipient_registration.py
src/email_storage/migrations/: 0001_initial.py  0002_initial.py
src/email_storage/models/: MessageTemplate.py  SentMessage.py  destinatários.py  group.py  recipient.py  sent_message.py
src/home/: urls.py
src/home/templates/: home.html
src/home/views/: about.py  guide.py
src/inbox/: urls.py
src/inbox/admin/: admin.py
src/inbox/forms/: group_baseform.py  group_registration.py  group_update.py  message_baseform.py  message_registration.py  message_template.py  message_update.py  recipient_baseform.py  recipient_registration.py  recipient_update.py
src/inbox/migrations/: 0001_initial.py  0002_initial.py  0003_recipient_contact_owner.py  0004_messagetemplate_message_owner.py  0005_rename_message_messagetemplate_content_and_more.py  0006_alter_group_recipients.py  0007_remove_sentmessage_groups_and_more.py
src/inbox/models/: group.py  message_template.py  recipient.py  (+1 more)
src/user/: admin.py  app.py  managers.py  urls.py
(+65 files in other folders)
